FIx vanishing final equation on small screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -218,7 +218,7 @@ input[type=number] {
 #card-help-text-intersection,
 #card-help-text-length,
 #card-help-text-final,
-#card-help-text-final-small {
+#card-help-text-final2 {
   height: auto;
   width: auto;
 }
